--- a/payload/package.json
+++ b/payload/package.json
@@ -13,7 +13,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@payloadcms/db-postgres": "^3.48.0",
     "@payloadcms/richtext-lexical": "^3.48.0",
